# anime1.rs

./: Cargo.toml  README.md
src/: main.rs
