[package]
name = "anime1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.6.0", features = ["https-native"] }
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
tl = "0.7.7"
urlencoding = "2.1.2"

